--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="css/main.css">
-	<title>Minimum</title>
+	<title>Minimal</title>
 </head>
 
 <body>
@@ -20,6 +20,11 @@
 				<li><a href="#">team</a></li>
 				<li><a href="#">contact</a></li>
 			</ul>
+			<div class="burger">
+				<span></span>
+				<span></span>
+				<span></span>
+			</div>
 		</header>
 		<!-- header end -->
 		<!-- obses -->
@@ -43,18 +48,18 @@
 		<div class="how">
 			<h1 class="title title-how">How we make brands thrive</h1>
 			<div class="brand">
-				<div class="set">
+				<div class="brand1 set">
 					<div class="img img1"><img src="img/nishon.png" alt=""></div>
 					<h3>SET a target</h3>
 					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum
 						tristique.</p>
 				</div>
-				<div class="design">
+				<div class="brand1 design">
 					<div class="img img2"><img src="img/chizgich.png" alt=""></div>
 					<h3>design a solution</h3>
 					<p>Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat.</p>
 				</div>
-				<div class="track">
+				<div class="brand1 track">
 					<div class="img img3"><img src="img/progress.png" alt=""></div>
 					<h3>track the progress</h3>
 					<p>Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique
@@ -198,7 +203,7 @@
 						<div class="img01 img002"><img src="img/lmail.svg" alt=""></div>
 						<h4>The traditional way</h4>
 						<span>email us</span>
-						<a href="#">contact@minimal.com</a>
+						<a href="mailto:contact@minimal.com">contact@minimal.com</a>
 						<p>Contact form Scroll down</p>
 					</div>
 					<div class="social">
